syntax = "proto3";
package v1;
option go_package = "/;v1";


enum MagicNumber{
    None = 0;
    HeaderMagic = 199809;
    DataMagicStart = 257758;
    DataMagicEnd = 857752;
}

message MagicHeader{
    uint64 magic_number = 1;
    uint64 stack_id = 2;
}

message DataRecordHeader{
    uint32 magic_start = 1;
    uint32 cookie = 2;
    uint32 size = 3;
    uint32 crc = 4;
    uint32 magic_end = 5;
}

message IndexRecord{
    uint64 offset_data = 1;
    uint32 size_data = 2;
    uint32 cookie = 3;
}

message MetaRecord{
    int64 create_time = 1;
    uint64 offset_data = 2;
    uint32 size_data = 3;
    uint32 cookie = 4;
    string filename = 5;
    bytes extra = 6;
}
